# kiro-tests

./: .gitignore  LICENSE  README.md
country-data-api-rust-kiro/: Cargo.toml  README.md
country-data-api-rust-kiro/.kiro/specs/country-data-api-rust/: design.md  requirements.md  tasks.md
country-data-api-rust-kiro/src/: lib.rs  main.rs  sample_data.rs
country-data-api-rust-kiro/src/api/: mod.rs  routes.rs
country-data-api-rust-kiro/src/models/: country.rs  mod.rs
country-data-api-rust-kiro/src/services/: mod.rs
country-data-api-rust-kiro/tests/: api_test.rs  data_store_test.proptest-regressions  data_store_test.rs  integration_test.rs  properties_test.proptest-regressions  properties_test.rs
my-birds/bird-watching-backend/: .env.example  .gitignore  Cargo.toml  README.md
my-birds/bird-watching-backend/migrations/: 20240101000001_create_users_table.sql  20240101000002_create_trips_table.sql  20240101000003_create_observations_table.sql  20240101000004_add_coordinates_to_observations.down.sql  20240101000004_add_coordinates_to_observations.sql
my-birds/bird-watching-backend/src/: lib.rs  main.rs
my-birds/bird-watching-backend/src/api/: auth.rs  mod.rs  observations.rs  photos.rs  trips.rs
my-birds/bird-watching-backend/src/middleware/: auth.rs  mod.rs
my-birds/bird-watching-backend/src/models/: mod.rs  observation.rs  trip.rs  user.rs
my-birds/bird-watching-backend/src/repositories/: mod.rs  observation_repository.rs  trip_repository.rs  user_repository.rs
my-birds/bird-watching-backend/src/services/: auth_service.rs  coordinate_validator.rs  geo_service.rs  mod.rs  observation_service.rs  photo_service.rs  trip_service.rs
my-birds/bird-watching-backend/src/utils/: errors.rs  jwt.rs  mod.rs  password.rs
my-birds/bird-watching-backend/tests/: geolocation_integration_test.rs  geolocation_properties_test.proptest-regressions  geolocation_properties_test.rs  observation_properties_test.rs  user_properties_test.proptest-regressions  user_properties_test.rs
work-tracker/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_ai_property_test.py  run_auth_property_test.py  run_auth_unit_tests.py  run_calendar_property_test.py  run_property_test.py  run_story_property_test.py  run_story_unit_tests.py  run_unit_tests.py
work-tracker/backend/alembic/: env.py
work-tracker/backend/alembic/versions/: 001_initial_schema.py  277687f44262_merge_calendar_integration.py  916737912d0c_add_calendar_integration_tables.py  add_calendar_integration_tables.py
work-tracker/backend/app/: __init__.py  main.py
work-tracker/backend/app/core/: __init__.py  config.py  database.py  exceptions.py
work-tracker/backend/database/: init.sql
work-tracker/backend/tests/: test_activity_properties.py  test_ai_properties.py  test_auth_properties.py  test_auth_service.py  test_calendar_properties.py  test_database_properties.py  test_export_properties.py  test_models.py  test_story_properties.py  test_story_service.py
(+428 files in other folders)
