[tool.poetry]
name = "work-tracker-backend"
version = "0.1.0"
description = "Work Tracker Backend API"
authors = ["Work Tracker Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
aioredis = "^2.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
boto3 = "^1.34.0"
botocore = "^1.34.0"
httpx = "^0.25.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
structlog = "^23.2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.3.2"}
email-validator = "^2.3.0"
google-auth = ">=2.15.0,<2.42.0"
google-auth-oauthlib = "^1.2.3"
google-auth-httplib2 = "^0.3.0"
google-api-python-client = "^2.187.0"
msal = "^1.34.0"
greenlet = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
hypothesis = "^6.92.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
